--- a/notebooks/step04_aCombine.ipynb
+++ b/notebooks/step04_aCombine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "[]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "[]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "[]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "[]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "[]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,16 +175,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Round</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>W</th>\n",
+       "      <th>Exp Wins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>147</td>\n",
+       "      <td>126</td>\n",
+       "      <td>101</td>\n",
+       "      <td>60</td>\n",
+       "      <td>37</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3.337838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>138</td>\n",
+       "      <td>93</td>\n",
+       "      <td>67</td>\n",
+       "      <td>32</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.351351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>126</td>\n",
+       "      <td>77</td>\n",
+       "      <td>37</td>\n",
+       "      <td>17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.837838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>117</td>\n",
+       "      <td>70</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.527027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>95</td>\n",
+       "      <td>50</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.121622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>91</td>\n",
+       "      <td>43</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.047297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>90</td>\n",
+       "      <td>28</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.898649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>72</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.716216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>76</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.594595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>58</td>\n",
+       "      <td>24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.621622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>57</td>\n",
+       "      <td>26</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.655405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>53</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.520270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>31</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.162162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.094595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16.0</th>\n",
+       "      <td>148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.006757</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Round    1    2    3    4   5   6   W  Exp Wins\n",
+       "1.0    148  147  126  101  60  37  23  3.337838\n",
+       "2.0    148  138   93   67  32  13   5  2.351351\n",
+       "3.0    148  126   77   37  17  11   4  1.837838\n",
+       "4.0    148  117   70   22  13   3   1  1.527027\n",
+       "5.0    148   95   50   11   7   3   0  1.121622\n",
+       "6.0    148   91   43   15   3   2   1  1.047297\n",
+       "7.0    148   90   28   10   3   1   1  0.898649\n",
+       "8.0    148   72   15    8   6   4   1  0.716216\n",
+       "9.0    148   76    7    4   1   0   0  0.594595\n",
+       "10.0   148   58   24    9   1   0   0  0.621622\n",
+       "11.0   148   57   26    9   5   0   0  0.655405\n",
+       "12.0   148   53   22    2   0   0   0  0.520270\n",
+       "13.0   148   31    6    0   0   0   0  0.250000\n",
+       "14.0   148   22    2    0   0   0   0  0.162162\n",
+       "15.0   148   10    3    1   0   0   0  0.094595\n",
+       "16.0   148    1    0    0   0   0   0  0.006757"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +466,7 @@
        "[]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +584,7 @@
        "      <td>-12.38</td>\n",
        "      <td>-2.13</td>\n",
        "      <td>-14.51</td>\n",
-       "      <td>0.231982</td>\n",
+       "      <td>0.238739</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -395,7 +632,7 @@
        "      <td>6.67</td>\n",
        "      <td>5.81</td>\n",
        "      <td>12.48</td>\n",
-       "      <td>0.279177</td>\n",
+       "      <td>0.278563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -491,7 +728,7 @@
        "      <td>7.94</td>\n",
        "      <td>14.60</td>\n",
        "      <td>22.55</td>\n",
-       "      <td>0.192568</td>\n",
+       "      <td>0.191723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>925</th>\n",
@@ -563,7 +800,7 @@
        "      <td>5.86</td>\n",
        "      <td>13.45</td>\n",
        "      <td>19.31</td>\n",
-       "      <td>0.176216</td>\n",
+       "      <td>0.175676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>928</th>\n",
@@ -622,22 +859,22 @@
        "928    North Carolina       69  ...  29.0  10.0  77.9   71.3   6.62   8.89   \n",
        "\n",
        "     OSRS_y  DSRS_y  SRS_y    PASE_y  \n",
-       "0    -12.38   -2.13 -14.51  0.231982  \n",
+       "0    -12.38   -2.13 -14.51  0.238739  \n",
        "1     -3.87    0.28  -3.59  0.493243  \n",
-       "2      6.67    5.81  12.48  0.279177  \n",
+       "2      6.67    5.81  12.48  0.278563  \n",
        "3      0.96    5.11   6.07  0.448198  \n",
        "4     -7.17   10.78   3.61 -0.123123  \n",
        "..      ...     ...    ...       ...  \n",
-       "924    7.94   14.60  22.55  0.192568  \n",
+       "924    7.94   14.60  22.55  0.191723  \n",
        "925    8.18    3.04  11.22 -0.164865  \n",
        "926   12.35    3.15  15.50  0.397655  \n",
-       "927    5.86   13.45  19.31  0.176216  \n",
+       "927    5.86   13.45  19.31  0.175676  \n",
        "928   12.35    3.15  15.50  0.397655  \n",
        "\n",
        "[929 rows x 52 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
