--- a/notebooks/step02_aScrapeEspnBpi.ipynb
+++ b/notebooks/step02_aScrapeEspnBpi.ipynb
@@ -14,7 +14,7 @@
     "from bs4 import BeautifulSoup\n",
     "import numpy as np\n",
     "\n",
-    "season = np.arange(2008,2024,1)\n",
+    "season = np.arange(2008,2023,1)\n",
     "\n",
     "page = np.arange(1,8,1)\n",
     "\n",
@@ -43,6 +43,52 @@
     "                \n",
     "                newrow = [y,Team,BPIO,BPID]\n",
     "                allBPI.loc[len(allBPI)]=newrow\n",
+    "allBPI.to_csv('step02_espnbpi0823.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scrape ESPN BPI 2023\n",
+    "\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import numpy as np\n",
+    "\n",
+    "y = 2023\n",
+    "\n",
+    "page = np.arange(1,8,1)\n",
+    "\n",
+    "allBPI = pd.read_csv('step02_espnbpi0823.csv')\n",
+    "allBPI = allBPI[allBPI['Year']!=2023]\n",
+    "\n",
+    "for x in page:\n",
+    "    # Downloading contents of the web page\n",
+    "    url = f\"https://www.espn.com/mens-college-basketball/bpi/_/view/bpi/season/{y}/page/{x}\"\n",
+    "    data = requests.get(url).text\n",
+    "\n",
+    "    # Creating BeautifulSoup object\n",
+    "    soup = BeautifulSoup(data, 'html.parser')\n",
+    "    table = soup.find('table', class_='bpi__table')\n",
+    "\n",
+    "    # Collecting Ddata\n",
+    "    for row in table.tbody.find_all('tr'):    \n",
+    "        # Find all data for each column\n",
+    "        columns = row.find_all('td')\n",
+    "        \n",
+    "        if(columns != []):\n",
+    "            \n",
+    "            Team = columns[1].find_all('span')[1].text.strip()\n",
+    "            \n",
+    "            BPIO = columns[4].text.strip()\n",
+    "            BPID = columns[5].text.strip()\n",
+    "            \n",
+    "            newrow = [y,Team,BPIO,BPID]\n",
+    "            allBPI.loc[len(allBPI)]=newrow\n",
     "allBPI.to_csv('step02_espnbpi0823.csv',index=False)"
    ]
   }
