--- a/notebooks/step03_aScrapeBR.ipynb
+++ b/notebooks/step03_aScrapeBR.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scrape Basketball Reference\n",
+    "# Scrape Basketball Reference 2008 to 2022\n",
     "# https://www.sports-reference.com/cbb/seasons/2008-ratings.html\n",
     "# Importing the required libraries\n",
     "import requests\n",
@@ -14,7 +14,7 @@
     "from bs4 import BeautifulSoup\n",
     "import numpy as np\n",
     "\n",
-    "season = np.arange(2008,2024,1)\n",
+    "season = np.arange(2008,2023,1)\n",
     "\n",
     "allBR = pd.DataFrame(columns = ['Year','Team','W','L','Pts','Opp','MOV','SOS','OSRS','DSRS','SRS'])\n",
     "\n",
@@ -49,240 +49,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>W</th>\n",
-       "      <th>L</th>\n",
-       "      <th>Pts</th>\n",
-       "      <th>Opp</th>\n",
-       "      <th>MOV</th>\n",
-       "      <th>SOS</th>\n",
-       "      <th>OSRS</th>\n",
-       "      <th>DSRS</th>\n",
-       "      <th>SRS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>Kansas</td>\n",
-       "      <td>37</td>\n",
-       "      <td>3</td>\n",
-       "      <td>80.5</td>\n",
-       "      <td>61.5</td>\n",
-       "      <td>19.03</td>\n",
-       "      <td>8.20</td>\n",
-       "      <td>14.90</td>\n",
-       "      <td>11.99</td>\n",
-       "      <td>26.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>North Carolina</td>\n",
-       "      <td>36</td>\n",
-       "      <td>3</td>\n",
-       "      <td>88.6</td>\n",
-       "      <td>72.5</td>\n",
-       "      <td>16.05</td>\n",
-       "      <td>8.12</td>\n",
-       "      <td>23.41</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>24.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>Memphis</td>\n",
-       "      <td>38</td>\n",
-       "      <td>2</td>\n",
-       "      <td>79.9</td>\n",
-       "      <td>61.9</td>\n",
-       "      <td>17.98</td>\n",
-       "      <td>5.76</td>\n",
-       "      <td>13.46</td>\n",
-       "      <td>10.28</td>\n",
-       "      <td>23.73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>UCLA</td>\n",
-       "      <td>35</td>\n",
-       "      <td>4</td>\n",
-       "      <td>73.5</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>14.54</td>\n",
-       "      <td>7.71</td>\n",
-       "      <td>8.60</td>\n",
-       "      <td>13.10</td>\n",
-       "      <td>21.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>Duke</td>\n",
-       "      <td>28</td>\n",
-       "      <td>6</td>\n",
-       "      <td>83.2</td>\n",
-       "      <td>69.4</td>\n",
-       "      <td>13.79</td>\n",
-       "      <td>9.28</td>\n",
-       "      <td>16.48</td>\n",
-       "      <td>5.04</td>\n",
-       "      <td>21.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5560</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Florida A&amp;M</td>\n",
-       "      <td></td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>54.4</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>-14.23</td>\n",
-       "      <td>-7.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5561</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Stony Brook</td>\n",
-       "      <td></td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>63.4</td>\n",
-       "      <td>72.4</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>-14.82</td>\n",
-       "      <td>-7.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5562</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Houston Christian</td>\n",
-       "      <td></td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>79.9</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>-7.42</td>\n",
-       "      <td>-14.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5563</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>IUPUI</td>\n",
-       "      <td></td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>58.6</td>\n",
-       "      <td>74.4</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>-13.59</td>\n",
-       "      <td>-10.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5564</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Hartford</td>\n",
-       "      <td></td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>68.3</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>-17.73</td>\n",
-       "      <td>-9.88</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5565 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Year               Team   W  L   Pts   Opp    MOV   SOS   OSRS    DSRS  \\\n",
-       "0     2008             Kansas  37  3  80.5  61.5  19.03  8.20  14.90   11.99   \n",
-       "1     2008     North Carolina  36  3  88.6  72.5  16.05  8.12  23.41    0.76   \n",
-       "2     2008            Memphis  38  2  79.9  61.9  17.98  5.76  13.46   10.28   \n",
-       "3     2008               UCLA  35  4  73.5  59.0  14.54  7.71   8.60   13.10   \n",
-       "4     2008               Duke  28  6  83.2  69.4  13.79  9.28  16.48    5.04   \n",
-       "...    ...                ...  .. ..   ...   ...    ...   ...    ...     ...   \n",
-       "5560  2023        Florida A&M      1     6  54.4   79.0               -14.23   \n",
-       "5561  2023        Stony Brook      2     7  63.4   72.4               -14.82   \n",
-       "5562  2023  Houston Christian      3     7  79.0   79.9                -7.42   \n",
-       "5563  2023              IUPUI      1     8  58.6   74.4               -13.59   \n",
-       "5564  2023           Hartford      4     8  66.0   68.3               -17.73   \n",
-       "\n",
-       "         SRS  \n",
-       "0      26.90  \n",
-       "1      24.17  \n",
-       "2      23.73  \n",
-       "3      21.71  \n",
-       "4      21.52  \n",
-       "...      ...  \n",
-       "5560   -7.52  \n",
-       "5561   -7.03  \n",
-       "5562  -14.76  \n",
-       "5563  -10.55  \n",
-       "5564   -9.88  \n",
-       "\n",
-       "[5565 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "allBR"
+    "# Scrape Basketball Reference 2023\n",
+    "# https://www.sports-reference.com/cbb/seasons/2008-ratings.html\n",
+    "# Importing the required libraries\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import numpy as np\n",
+    "\n",
+    "y = 2023\n",
+    "\n",
+    "allBR = pd.read_csv('step03_br0823.csv')\n",
+    "allBR =allBR[allBR['Year']!=2023]\n",
+    "\n",
+    "\n",
+    "# Downloading contents of the web page\n",
+    "url = f\"https://www.sports-reference.com/cbb/seasons/{y}-ratings.html\"\n",
+    "data = requests.get(url).text\n",
+    "\n",
+    "# Creating BeautifulSoup object\n",
+    "soup = BeautifulSoup(data, 'html.parser')\n",
+    "table = soup.find('table', class_='stats_table')\n",
+    "\n",
+    "# Collecting Ddata\n",
+    "for row in table.tbody.find_all('tr'):    \n",
+    "    # Find all data for each column\n",
+    "    columns = row.find_all('td')\n",
+    "    if(columns != []):\n",
+    "        Team = columns[0].text.strip()\n",
+    "        W = columns[3].text.strip()\n",
+    "        L = columns[4].text.strip()\n",
+    "        Pts = columns[5].text.strip()\n",
+    "        Opp = columns[6].text.strip()\n",
+    "        MOV = columns[7].text.strip()\n",
+    "        SOS = columns[9].text.strip()\n",
+    "        OSRS = columns[11].text.strip()\n",
+    "        DSRS = columns[12].text.strip()\n",
+    "        SRS = columns[13].text.strip()\n",
+    "        newrow = [y,Team,W,L,Pts,Opp,MOV,SOS,OSRS,DSRS,SRS]\n",
+    "        allBR.loc[len(allBR)]=newrow\n",
+    "allBR.to_csv('step03_br0823.csv',index=False)"
    ]
   }
  ],
