--- a/notebooks/step04_aCombine.ipynb
+++ b/notebooks/step04_aCombine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "[]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "[]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,16 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['Umass Lowell', 'NorthWestern']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "16.0   152    1    0    0   0   0   0  0.006579"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,16 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['Umass Lowell', 'NorthWestern']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -713,22 +713,22 @@
        "      <td>SE</td>\n",
        "      <td>28</td>\n",
        "      <td>4</td>\n",
-       "      <td>Providence</td>\n",
-       "      <td>66</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>1</td>\n",
        "      <td>13</td>\n",
-       "      <td>South Dakota St.</td>\n",
-       "      <td>57</td>\n",
+       "      <td>Princeton</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>67.1</td>\n",
-       "      <td>70.60</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>74.9</td>\n",
+       "      <td>64.70</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-3.79</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>-0.316886</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>2.73</td>\n",
+       "      <td>-0.222588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>963</th>\n",
@@ -737,22 +737,22 @@
        "      <td>SE</td>\n",
        "      <td>29</td>\n",
        "      <td>6</td>\n",
-       "      <td>LSU</td>\n",
-       "      <td>54</td>\n",
+       "      <td>Michigan St.</td>\n",
+       "      <td>1</td>\n",
        "      <td>11</td>\n",
-       "      <td>Iowa St.</td>\n",
-       "      <td>59</td>\n",
+       "      <td>UCF</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>70.8</td>\n",
-       "      <td>57.90</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>72.1</td>\n",
+       "      <td>63.40</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.42</td>\n",
-       "      <td>16.89</td>\n",
-       "      <td>-0.068296</td>\n",
+       "      <td>3.41</td>\n",
+       "      <td>9.80</td>\n",
+       "      <td>0.086623</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>964</th>\n",
@@ -761,22 +761,22 @@
        "      <td>SE</td>\n",
        "      <td>30</td>\n",
        "      <td>3</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "      <td>67</td>\n",
+       "      <td>Iowa St.</td>\n",
+       "      <td>1</td>\n",
        "      <td>14</td>\n",
-       "      <td>Colgate</td>\n",
-       "      <td>60</td>\n",
+       "      <td>Troy</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>12.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>79.9</td>\n",
-       "      <td>72.40</td>\n",
+       "      <td>73.8</td>\n",
+       "      <td>64.10</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6.02</td>\n",
-       "      <td>-4.73</td>\n",
-       "      <td>-0.096491</td>\n",
+       "      <td>-0.49</td>\n",
+       "      <td>2.77</td>\n",
+       "      <td>-0.135965</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>965</th>\n",
@@ -785,22 +785,22 @@
        "      <td>SE</td>\n",
        "      <td>31</td>\n",
        "      <td>7</td>\n",
-       "      <td>USC</td>\n",
-       "      <td>66</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>1</td>\n",
        "      <td>10</td>\n",
-       "      <td>Miami FL</td>\n",
-       "      <td>68</td>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>78.2</td>\n",
-       "      <td>69.40</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>82.1</td>\n",
+       "      <td>72.80</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>10.95</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>-0.174641</td>\n",
+       "      <td>15.61</td>\n",
+       "      <td>-0.80</td>\n",
+       "      <td>-0.178289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>966</th>\n",
@@ -809,26 +809,26 @@
        "      <td>SE</td>\n",
        "      <td>32</td>\n",
        "      <td>2</td>\n",
-       "      <td>Auburn</td>\n",
-       "      <td>80</td>\n",
+       "      <td>Tennessee</td>\n",
+       "      <td>1</td>\n",
        "      <td>15</td>\n",
-       "      <td>Jacksonville St.</td>\n",
-       "      <td>61</td>\n",
+       "      <td>Samford</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>69.2</td>\n",
-       "      <td>70.80</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>78.7</td>\n",
+       "      <td>70.10</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-6.86</td>\n",
-       "      <td>-3.78</td>\n",
-       "      <td>-0.092105</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>-1.17</td>\n",
+       "      <td>-0.164474</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>967 rows × 52 columns</p>\n",
+       "<p>967 rows × 54 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -839,24 +839,24 @@
        "3    2008     1     NW     3       5        Notre Dame       68      12   \n",
        "4    2008     1     NW     4       4    Washington St.       71      13   \n",
        "..    ...   ...    ...   ...     ...               ...      ...     ...   \n",
-       "962  2023     1     SE    28       4        Providence       66      13   \n",
-       "963  2023     1     SE    29       6               LSU       54      11   \n",
-       "964  2023     1     SE    30       3         Wisconsin       67      14   \n",
-       "965  2023     1     SE    31       7               USC       66      10   \n",
-       "966  2023     1     SE    32       2            Auburn       80      15   \n",
+       "962  2023     1     SE    28       4          Virginia        1      13   \n",
+       "963  2023     1     SE    29       6      Michigan St.        1      11   \n",
+       "964  2023     1     SE    30       3          Iowa St.        1      14   \n",
+       "965  2023     1     SE    31       7    North Carolina        1      10   \n",
+       "966  2023     1     SE    32       2         Tennessee        1      15   \n",
        "\n",
-       "               AUTeam  AUScore  ...   W_y   L_y Pts_y  Opp_y  MOV_y  SOS_y  \\\n",
-       "0          Coppin St.       60  ...  16.0  21.0  59.8   66.0  -6.24  -6.20   \n",
-       "1    Mount St. Mary's       74  ...  19.0  15.0  69.2   67.7   1.53  -5.12   \n",
-       "2            Arkansas       86  ...  23.0  12.0  74.1   68.3   5.74   6.73   \n",
-       "3        George Mason       50  ...  23.0  11.0  69.3   62.5   6.82  -0.75   \n",
-       "4            Winthrop       40  ...  22.0  12.0  64.9   58.5   6.32  -1.45   \n",
-       "..                ...      ...  ...   ...   ...   ...    ...    ...    ...   \n",
-       "962  South Dakota St.       57  ...   NaN   9.0   9.0   67.1  70.60    NaN   \n",
-       "963          Iowa St.       59  ...  14.0  13.0   3.0   70.8  57.90    NaN   \n",
-       "964           Colgate       60  ...   NaN  12.0   7.0   79.9  72.40    NaN   \n",
-       "965          Miami FL       68  ...  16.0  14.0   3.0   78.2  69.40    NaN   \n",
-       "966  Jacksonville St.       61  ...   NaN   8.0  11.0   69.2  70.80    NaN   \n",
+       "               AUTeam  AUScore  ...   W_y   L_y  Pts_y  Opp_y  MOV_y  SOS_y  \\\n",
+       "0          Coppin St.       60  ...  16.0  21.0   59.8   66.0  -6.24  -6.20   \n",
+       "1    Mount St. Mary's       74  ...  19.0  15.0   69.2   67.7   1.53  -5.12   \n",
+       "2            Arkansas       86  ...  23.0  12.0   74.1   68.3   5.74   6.73   \n",
+       "3        George Mason       50  ...  23.0  11.0   69.3   62.5   6.82  -0.75   \n",
+       "4            Winthrop       40  ...  22.0  12.0   64.9   58.5   6.32  -1.45   \n",
+       "..                ...      ...  ...   ...   ...    ...    ...    ...    ...   \n",
+       "962         Princeton        1  ...   NaN  12.0    5.0   74.9  64.70    NaN   \n",
+       "963               UCF        1  ...   NaN  13.0    5.0   72.1  63.40    NaN   \n",
+       "964              Troy        1  ...   NaN  12.0    7.0   73.8  64.10    NaN   \n",
+       "965              Iowa        1  ...   NaN  11.0    6.0   82.1  72.80    NaN   \n",
+       "966           Samford        1  ...   NaN  12.0    7.0   78.7  70.10    NaN   \n",
        "\n",
        "     OSRS_y  DSRS_y  SRS_y    PASE_y  \n",
        "0    -12.38   -2.13 -14.51  0.241228  \n",
@@ -865,16 +865,16 @@
        "3      0.96    5.11   6.07  0.458333  \n",
        "4     -7.17   10.78   3.61 -0.116959  \n",
        "..      ...     ...    ...       ...  \n",
-       "962     NaN   -3.79   0.77 -0.316886  \n",
-       "963     NaN    1.42  16.89 -0.068296  \n",
-       "964     NaN    6.02  -4.73 -0.096491  \n",
-       "965     NaN   10.95   0.91 -0.174641  \n",
-       "966     NaN   -6.86  -3.78 -0.092105  \n",
+       "962     NaN    1.27   2.73 -0.222588  \n",
+       "963     NaN    3.41   9.80  0.086623  \n",
+       "964     NaN   -0.49   2.77 -0.135965  \n",
+       "965     NaN   15.61  -0.80 -0.178289  \n",
+       "966     NaN    1.92  -1.17 -0.164474  \n",
        "\n",
-       "[967 rows x 52 columns]"
+       "[967 rows x 54 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
