Feb Data Update

--- a/notebooks/step01_aScrapeKenPom.ipynb
+++ b/notebooks/step01_aScrapeKenPom.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +113,17 @@
     "\n",
     "\n",
     "allkp.to_csv('step01_kenpom0823.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = allkp['Team'].unique()\n",
+    "b = pd.DataFrame({'tm':sorted(a)})\n",
+    "b.to_csv('aaa.csv',index=False)"
    ]
   }
  ],
