--- a/notebooks/step02_aScrapeEspnBpi.ipynb
+++ b/notebooks/step02_aScrapeEspnBpi.ipynb
@@ -2,94 +2,133 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scrape ESPN BPI 2008 to 2022\n",
-    "# https://www.espn.com/mens-college-basketball/bpi/_/view/bpi/season/2008/page/2\n",
-    "# Importing the required libraries\n",
-    "import requests\n",
+    "# Scrape ESPN BPI 2008 - 2022 https://www.espn.com/mens-college-basketball/bpi\n",
+    "\n",
+    "from selenium import webdriver\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n",
-    "import numpy as np\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "import time\n",
     "\n",
-    "season = np.arange(2008,2023,1)\n",
+    "PATH = 'E:\\Github\\chromedriver.exe' \n",
+    "opt = Options()\n",
+    "opt.add_argument('--headless')\n",
+    "driver = webdriver.Chrome(PATH,options=opt)\n",
     "\n",
-    "page = np.arange(1,8,1)\n",
+    "driver.get('https://www.espn.com/mens-college-basketball/bpi/_/view/bpi/season/2008')\n",
+    "driver.maximize_window()\n",
     "\n",
-    "allBPI = pd.DataFrame(columns = ['Year','Team','BPIO','BPID'])\n",
-    "for y in season:\n",
-    "    for x in page:\n",
-    "        # Downloading contents of the web page\n",
-    "        url = f\"https://www.espn.com/mens-college-basketball/bpi/_/view/bpi/season/{y}/page/{x}\"\n",
-    "        data = requests.get(url).text\n",
+    "element = WebDriverWait(driver, 20).until(EC.presence_of_element_located((By.ID, \"onetrust-accept-btn-handler\"))).click()\n",
+    "time.sleep(5)\n",
+    "try:\n",
+    "    for x in range(7):\n",
+    "        element = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.LINK_TEXT, \"Show More\"))).click() \n",
+    "except:\n",
+    "    try:\n",
+    "        element = WebDriverWait(driver, 1000).until(EC.presence_of_element_located((By.XPATH, \"//table\")))\n",
+    "        df = pd.read_html(driver.page_source)[0]\n",
+    "        df2 = pd.read_html(driver.page_source)[1]\n",
+    "    finally:\n",
+    "        \n",
+    "        bpi = pd.concat([df, df2], axis=1)\n",
+    "        bpi['Year']=2008\n",
+    "        bpi = bpi.iloc[:,[12,0,1,6,7]]\n",
+    "        bpi.columns = ['Year','Team','Conf','BPI(O)','BPI(D)']\n",
+    "        print(2008)\n",
+    "espnBPI = bpi\n",
     "\n",
-    "        # Creating BeautifulSoup object\n",
-    "        soup = BeautifulSoup(data, 'html.parser')\n",
-    "        table = soup.find('table', class_='bpi__table')\n",
     "\n",
-    "        # Collecting Ddata\n",
-    "        for row in table.tbody.find_all('tr'):    \n",
-    "            # Find all data for each column\n",
-    "            columns = row.find_all('td')\n",
+    "for y in range(2009,2023):\n",
+    "    driver.find_element_by_tag_name('body').send_keys(Keys.COMMAND + 't') \n",
+    "    driver.get(f'https://www.espn.com/mens-college-basketball/bpi/_/season/{y}')\n",
+    "    time.sleep(10)\n",
+    "    try:\n",
+    "        for x in range(7):\n",
+    "            element = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.LINK_TEXT, \"Show More\"))).click() \n",
+    "    except:\n",
+    "        try:\n",
+    "            element = WebDriverWait(driver, 1000).until(EC.presence_of_element_located((By.XPATH, \"//table\")))\n",
+    "            df = pd.read_html(driver.page_source)[0]\n",
+    "            df2 = pd.read_html(driver.page_source)[1]\n",
+    "        finally:\n",
     "            \n",
-    "            if(columns != []):\n",
-    "               \n",
-    "                Team = columns[1].find_all('span')[1].text.strip()\n",
-    "               \n",
-    "                BPIO = columns[4].text.strip()\n",
-    "                BPID = columns[5].text.strip()\n",
-    "                \n",
-    "                newrow = [y,Team,BPIO,BPID]\n",
-    "                allBPI.loc[len(allBPI)]=newrow\n",
-    "allBPI.to_csv('step02_espnbpi0823.csv',index=False)"
+    "            bpi = pd.concat([df, df2], axis=1)\n",
+    "            bpi['Year']=y\n",
+    "            bpi = bpi.iloc[:,[12,0,1,6,7]]\n",
+    "            bpi.columns = ['Year','Team','Conf','BPI(O)','BPI(D)']\n",
+    "            print(y)\n",
+    "    espnBPI = pd.concat([espnBPI,bpi])  \n",
+    "\n",
+    "\n",
+    "espnBPI.to_csv('step02_espnbpi0823.csv',index=False)   \n",
+    "    \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scrape ESPN BPI 2023\n",
+    "# Scrape ESPN BPI 2023 https://www.espn.com/mens-college-basketball/bpi\n",
     "\n",
-    "import requests\n",
+    "from selenium import webdriver\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n",
-    "import numpy as np\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import time\n",
     "\n",
+    "PATH = 'E:\\Github\\chromedriver.exe' \n",
+    "opt = Options()\n",
+    "opt.add_argument('--headless')\n",
+    "driver = webdriver.Chrome(PATH,options=opt)\n",
     "y = 2023\n",
+    "driver.get(f'https://www.espn.com/mens-college-basketball/bpi/_/view/bpi/season/{y}')\n",
+    "driver.maximize_window()\n",
     "\n",
-    "page = np.arange(1,8,1)\n",
-    "\n",
-    "allBPI = pd.read_csv('step02_espnbpi0823.csv')\n",
-    "allBPI = allBPI[allBPI['Year']!=2023]\n",
-    "\n",
-    "for x in page:\n",
-    "    # Downloading contents of the web page\n",
-    "    url = f\"https://www.espn.com/mens-college-basketball/bpi/_/view/bpi/season/{y}/page/{x}\"\n",
-    "    data = requests.get(url).text\n",
-    "\n",
-    "    # Creating BeautifulSoup object\n",
-    "    soup = BeautifulSoup(data, 'html.parser')\n",
-    "    table = soup.find('table', class_='bpi__table')\n",
-    "\n",
-    "    # Collecting Ddata\n",
-    "    for row in table.tbody.find_all('tr'):    \n",
-    "        # Find all data for each column\n",
-    "        columns = row.find_all('td')\n",
-    "        \n",
-    "        if(columns != []):\n",
-    "            \n",
-    "            Team = columns[1].find_all('span')[1].text.strip()\n",
-    "            \n",
-    "            BPIO = columns[4].text.strip()\n",
-    "            BPID = columns[5].text.strip()\n",
-    "            \n",
-    "            newrow = [y,Team,BPIO,BPID]\n",
-    "            allBPI.loc[len(allBPI)]=newrow\n",
-    "allBPI.to_csv('step02_espnbpi0823.csv',index=False)"
+    "element = WebDriverWait(driver, 20).until(EC.presence_of_element_located((By.ID, \"onetrust-accept-btn-handler\"))).click()\n",
+    "time.sleep(5)\n",
+    "try:\n",
+    "    for x in range(8):\n",
+    "        element = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.LINK_TEXT, \"Show More\"))).click() \n",
+    "except:\n",
+    "    try:\n",
+    "        element = WebDriverWait(driver, 1000).until(EC.presence_of_element_located((By.XPATH, \"//table\")))\n",
+    "        df = pd.read_html(driver.page_source)[0]\n",
+    "        df2 = pd.read_html(driver.page_source)[1]\n",
+    "    finally:\n",
+    "        driver.quit()\n",
+    "        bpi = pd.concat([df, df2], axis=1)\n",
+    "        bpi['Year']=y\n",
+    "        bpi = bpi.iloc[:,[12,0,1,6,7]]\n",
+    "        bpi.columns = ['Year','Team','Conf','BPI(O)','BPI(D)']\n",
+    "espnBPI = pd.read_csv('step02_espnbpi0823.csv')\n",
+    "espnBPI = espnBPI[espnBPI['Year']!=y]   \n",
+    "espnBPI = pd.concat([espnBPI,bpi]) \n",
+    "espnBPI.to_csv('step02_espnbpi0823.csv',index=False)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = espnBPI['Team'].unique()\n",
+    "b = pd.DataFrame({'tm':sorted(a)})\n",
+    "b.to_csv('bbb.csv',index=False)"
    ]
   }
  ],
