--- a/notebooks/step05_FullPredict.ipynb
+++ b/notebooks/step05_FullPredict.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\harmk\\AppData\\Local\\Temp\\ipykernel_17592\\959825959.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  fup = fup[fup['Year']<=2022][fup['Game']>=1]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -26,21 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016\n"
+      "2009\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\harmk\\AppData\\Local\\Temp\\ipykernel_2680\\3311913900.py:24: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\harmk\\AppData\\Local\\Temp\\ipykernel_17592\\3311913900.py:24: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  r1p = fup[fup['Year']==py][fup['Round']==1]\n"
      ]
     },
@@ -48,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "900.0\n"
+      "1480.0\n"
      ]
     }
    ],
