--- a/notebooks/step04_aCombine.ipynb
+++ b/notebooks/step04_aCombine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "[]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,12 +31,13 @@
     "KPN = KP.sort_values('Team')['Team'].unique()\n",
     "KP2fix = list(set(KPN) - set(sn))\n",
     "KP.to_csv('step01_kenpom0823.csv',index=False)\n",
+    "pd.DataFrame(sn).to_csv('asn.csv',index=False)\n",
     "KP2fix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +46,7 @@
        "[]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +75,7 @@
        "[]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,7 @@
        "[]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +131,7 @@
        "[]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +221,7 @@
        "[]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,13 +235,13 @@
     "paseN = pase['Team'].unique()\n",
     "pase2fix = list(set(paseN) - set(sn))\n",
     "\n",
-    "#pase.to_csv('../data/d3_PASE.csv',index=False)\n",
+    "pase.to_csv('step04_PASE.csv',index=False)\n",
     "pase2fix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
